--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,8 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.EmployeeApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-         <item name="colorPrimary">@color/material_dynamic_primary60</item>
+        <item name="colorPrimary">@color/material_dynamic_primary60</item>
+        <item name="android:textColorPrimary">@color/black</item>
     </style>
 
     <style name="Theme.EmployeeApp" parent="Base.Theme.EmployeeApp" />
